# tcc-consolidacion-informes-backend

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  tcc.db
.github/workflows/: tcc-scheduler.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_report_files.py  3430adc0c2a6_add_shipping_date_to_shipments.py
app/: main.py
app/api/: deps.py
app/core/: config.py  database.py  exceptions.py  logging.py
app/jobs/: scheduler.py  tracking_job.py
app/models/: __init__.py  alert_event.py  app_setting.py  email_recipient.py  report_file.py  shipment.py  tracking_event.py  tracking_run.py  weekly_rollup.py
app/repositories/: alert_event_repository.py  base.py  email_recipient_repository.py  shipment_repository.py  tracking_event_repository.py  tracking_run_repository.py
docs/: azure_email_setup.md  tcc_integration.md  tcc_operations.md  tcc_troubleshooting.md
scripts/: alert_email_worker.py  cargar_guias.py  debug_captcha.py  find_api_endpoint.py  find_routes.py  find_tcc_api.py  find_tracking_func.py  generar_excel_muestra.py  github_tracking_worker.py  intercept_tcc.py  local_email_dispatcher.py  register_windows_tasks.ps1  run_job.py  run_scheduled_job.ps1  seed.py  send_email_graph.py  test_tracking_api.py
tests/: conftest.py  test_alert_logic.py  test_cron_auth.py  test_email_service.py  test_excel_service.py  test_guias_api.py  test_normalizer.py  test_parser.py  test_pdf_service.py  test_shipments.py  test_tcc_providers.py  test_tracking_job.py
(+32 files in other folders)
